2016-04-30	g++ 5 compatibility.

		include/biting-pear/lolwut.h :
		- fixed scrambling of library function addresses under g++ 5
		  for x86-32
		- now does a `#pragma message' when compiling under buggy
		  g++ for ARM

		include/biting-pear/rofl.h :
		- can now scramble syscalls on x86-32, and partially scramble
		  syscalls on other platforms
		- added rofl<...>::mprotect(...)

		share/biting-pear/doge-1.ccc ,
		share/biting-pear/doge-8.ccc :
		- now uses rofl<...>::mprotect(...)

		share/biting-pear/omnomnom.lxx :
		- fixed handling of ?<...> to prevent generated numbers from
		  being output before a preprocessor directive on the same
		  line

		.travis.yml :
		- added environment settings for using g++ 5

		test/travis-install-deps.sh :
		- now tries to install g++ 5 if .travis.yml says to
		- added `flex' as a prerequisite package

2016-04-19	"And he was clad in cote and hood of grene."  (2)

		include/biting-pear/lolwut.h :
		- position-independent munging of function pointers now
		  works properly on x86-32

		include/biting-pear/omg.h :
		- fixed operator precedence bug
		- minor fix:  added proper "cc" clobbers for x86-32, x86-64,
		  and ARM

		include/biting-pear/kthxbai.h :
		- minor fix:  added proper "cc" clobber for x86-32 `arplw'

		include/biting-pear/host/rly.h :
		- fixed default parameter values in rly<T, Levels>::
		  operator()(...)

		include/biting-pear/yarly.h :
		- removed redundant condition check

2016-04-17	"And he was clad in cote and hood of grene."

		share/biting-pear/doge-8.ccc :
		- munged call to mprotect(...)
		- added optimize("no-reorder-blocks") attribute for the
		  wiping routine

2016-04-14	Memory wiping on ARM.

		include/biting-pear/rofl.h :
		- specific implementations of biting_pear::rofl<...> for ARM
		- slight tweak of biting_pear::rofl<...> for x86-32 and
		  x86-64

2016-04-12	ARMv4 workaround; added ARMv4t target.

		include/biting-pear/lolwut.h :
		- added workaround for g++ 4.7 bug triggered when compiling